# algos

./: .backlog.txt  .gitignore  CMakeLists.txt  Jamfile  README.md  SetupHunter.cmake  lower_bound_tets.cpp  notes.txt  rebuild  rebuild.sh  topo_sort.h  topo_sort_test.cpp  write_version.sh
.backlog/: ideas.md
.github/workflows/: build_cmake.yml  build_nicledomaS.yml  build_std.yml
algos/: lower_bound.h  topo_sort.h  utils.h
test/: lower_bound_test.cpp  topo_sort_test.cpp
